--- a/front/static/css/style.css
+++ b/front/static/css/style.css
@@ -1627,7 +1627,7 @@ ul.logo-list {
         display: block;
         padding: 55px;
         margin-bottom: 30px;
-        width: 48.633%;
+        width: 48%;
         float: left;
         background: #FFFFFF;
         overflow: hidden;
@@ -1761,6 +1761,7 @@ img.ajax-loader {
 }
 
 
+
 /* sign in FORM */
 #logreg-forms{
     width:412px;
@@ -1783,14 +1784,15 @@ img.ajax-loader {
     font-size: 16px;
 }
 #logreg-forms .form-control:focus { z-index: 2; }
-#logreg-forms .form-signin input[type="email"] {
-    margin-bottom: -1px;
+#logreg-forms .form-signin input[type="text"] {
+    margin-bottom: 10px !important;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
 #logreg-forms .form-signin input[type="password"] {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    margin-bottom: 10px !important;
 }
 
 #logreg-forms .social-login{
@@ -1827,13 +1829,15 @@ img.ajax-loader {
 
 #logreg-forms .form-signup .social-btn{ width:210px; }
 
-#logreg-forms .form-signup input { margin-bottom: 2px;}
+#logreg-forms .form-signup input { margin-bottom: 10px;}
 
 .form-signup .social-login{
     width:210px !important;
     margin: 0 auto;
 }
-
+#logreg-forms hr{
+    margin: 20px 0px;
+}
 /* Mobile */
 
 @media screen and (max-width:500px){
@@ -1878,7 +1882,7 @@ img.ajax-loader {
 .sec-form{background: #eee;}
 .sec-form .fix-wrap{max-width: 570px;margin: auto;}
 .form-top{text-align: center;}
-.form-top h2{color: #1F3443;font-family: 'georgia';font-size: 44px;line-height: 1;text-align: center;font-weight: 500;margin-bottom:20px;: }
+.form-top h2{color: #1F3443;font-family: 'georgia';font-size: 44px;line-height: 1;text-align: center;font-weight: 500;margin-bottom:20px; }
 .form-top p{color: #416B89;font-family: 'georgia';font-size: 28px;	line-height: 1.5; margin-bottom: 0; text-align: center;font-weight: 500;}
 .time-list{padding:  60px 0 70px; text-align: center;}
 .time-list span{display: block; color: #747E85;font-family: 'Montserrat', sans-serif;font-size: 18px;text-align: center;border-top: 1px solid #a5a5a5; padding: 15px 0; font-weight: 500;}
